# perific-ha

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.agents/skills/boundary/: SKILL.md
.agents/skills/boundary/agents/: openai.yaml
.agents/skills/commit/: SKILL.md
.agents/skills/commit/agents/: openai.yaml
.agents/skills/commit/scripts/: staged-secret-scan.py  status-screen.py
.agents/skills/friction/: SKILL.md
.agents/skills/friction/agents/: openai.yaml
.agents/skills/instructions/: SKILL.md
.agents/skills/instructions/agents/: openai.yaml
.agents/skills/reviewing/: SKILL.md
.agents/skills/reviewing/agents/: openai.yaml
.agents/skills/testing/: SKILL.md
.agents/skills/testing/agents/: openai.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
api/: perific.openapi.yaml
custom_components/perific/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  meter.py  sensor.py  store.py  strings.json
custom_components/perific/translations/: en.json
docs/: api-verification.md  release.md
scripts/: probe-public-api.sh  smoke-ha-sensor.py
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_release_metadata.py  test_sensor.py  test_smoke_ha_sensor.py  test_store.py
