[project]
name = "perific-ha"
version = "0.4.3"
description = "Home Assistant custom integration for Perific/Enegic meters."
readme = "README.md"
requires-python = ">=3.14.2"
license = "Apache-2.0"
dependencies = []

[tool.uv]
conflicts = [
  [
    { group = "dev" },
    { group = "minimum-homeassistant" },
  ],
]

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = [".agents"]

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # Conflicts with the formatter.
  "CPY001", # This project does not use per-file copyright headers.
  "D", # Docstring coverage is not a correctness gate for this integration.
  "FIX002", # TODO comments are allowed when they do not mask behavior.
  "ISC001", # Conflicts with the formatter.
  "TD002", # TODO author tags do not add useful ownership here.
  "TD003", # TODO issue links are not required for local exploratory work.
]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["custom_components.perific"]

[tool.ruff.lint.per-file-ignores]
"custom_components/perific/__init__.py" = [
  "PLC0415", # Keep Home Assistant imports lazy so parser tests do not require HA.
  "RUF067", # Home Assistant integrations require setup hooks in __init__.py.
]
"custom_components/perific/binary_sensor.py" = [
  "RUF029", # Home Assistant platform setup hooks are async by contract.
]
"custom_components/perific/const.py" = [
  "S105", # These are config-entry key names, not embedded secret values.
]
"custom_components/perific/diagnostics.py" = [
  "RUF029", # Home Assistant diagnostics hooks are async by contract.
]
"custom_components/perific/sensor.py" = [
  "RUF029", # Home Assistant platform setup hooks are async by contract.
]
"tests/**/*.py" = [
  "S101", # Pytest assertions are the intended test style.
  "S106", # Redacted token strings in tests are not real credentials.
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.semantic_release]
allow_zero_version = true
build_command = """
set -e
python -m pip install "uv==0.11.16"
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
"""
commit_message = "chore(release): v{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["custom_components/perific/manifest.json:version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore\(release\): .+''',
]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
mask_initial_release = true
output_format = "md"

[dependency-groups]
dev = [
    { include-group = "test" },
    "aiohttp>=3.13.5,<3.14",
    "homeassistant>=2026.5.3",
    "pre-commit>=4.6.0",
    "pytest-homeassistant-custom-component>=0.13.332",
    "ruff>=0.15.18",
]
minimum-homeassistant = [
    { include-group = "test" },
    "aiohttp>=3.13.5,<3.14",
    "homeassistant==2026.5.3",
    "pytest-homeassistant-custom-component==0.13.332",
]
test = [
    "pytest>=9.0.3,<9.1",
    "pytest-aiohttp>=1.1.0",
    "pytest-cov>=7.1.0",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-picked>=0.5.1",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.4.0",
    "pytest-unordered>=0.7.0",
    "requests-mock>=1.12.1",
    "respx>=0.23.1",
]
